<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12sp"
            android:background="#1E88E5"

            android:text="@string/play_name"
            android:textAlignment="center"
            android:textColor="#FAFAFA"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="8sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8sp"
                android:layout_marginLeft="8sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16sp"
                    android:text="@string/player_1"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16sp"
                    android:text="@string/Score_1"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ET_count1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_score1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:background="#1E88E5"
                    android:onClick="calcScore1"
                    android:text="@string/Score_1"
                    android:textColor="#FAFAFA"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_score1"
                    android:textAlignment="center"
                    android:textSize="24sp"

                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/tv_total_score1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textAlignment="center"

                    android:textSize="90dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8sp"
                android:layout_marginLeft="8sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16sp"
                    android:text="@string/player_2"

                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txt_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16sp"
                    android:text="@string/Score_2"

                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ET_count2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btn_score2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:background="#1E88E5"

                    android:onClick="calcScore2"
                    android:text="@string/Score_2"
                    android:textColor="#FAFAFA"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_score2"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/tv_total_score2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textAlignment="center"

                    android:textSize="90dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#1E88E5"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="#FAFAFA"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>